# polish-inflection

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data-package/: README.md  pyproject.toml
data-package/sgjp/: PIN.json  README.md
data-package/src/polish_inflection_data/: __init__.py
data-package/src/polish_inflection_data/data/: BUILD_INFO.json  NOTICE.md  przymiotniki.marisa
data/sgjp/: LICENSE.sgjp
docs/: 2026-07-02-polish-inflection-design.md  api.md  budowanie.md
docs/superpowers/specs/: 2026-07-02-pytania-api-design.md  2026-07-03-split-polish-inflection-data-design.md
examples/: 01_odmien.py  02_podaj.py  03_fallbacki.py  04_szablony_ui.py  05_pytania.py  06_liczebnikowa.py  07_przymiotniki.py  08_frazy.py  README.md
src/polish_inflection/: __init__.py  _dane.py  build.py  const.py  core.py  errors.py  fraza.py  przymiotnik.py  pytania.py
src/polish_inflection/data/: BUILD_INFO.json
tests/: conftest.py  test_build.py  test_characterization.py  test_core.py  test_fraza.py  test_liczebnikowa.py  test_pakiet_danych.py  test_podaj_przymiotnik.py  test_przymiotnik.py  test_pytania.py  test_tags.py  test_zgadnij_przymiotnik.py
tests/fixtures/: sgjp_domain.tab
