[project]
name = "polish-inflection"
version = "0.7.0"
description = "Lekka odmiana polskich rzeczowników przez przypadki (dane SGJP, indeks marisa-trie, mmap)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }
authors = [{ name = "Michał Pasternak", email = "m@iplweb.pl" }]
keywords = ["polish", "inflection", "declension", "nlp", "sgjp", "morphology", "przypadki", "odmiana"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: Polish",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "marisa-trie>=1.0",
    # Indeksy SGJP w osobnym pakiecie (wersjonowanym wg edycji słownika), żeby
    # wydania kodu nie re-publikowały ~49 MB danych. Dolny pin = min. edycja SGJP
    # zgodna z aktualnym schematem artefaktów (_dane._SCHEMA).
    "polish-inflection-data>=2026.6.28",
]

[project.urls]
Homepage = "https://github.com/mpasternak/polish-inflection"
Repository = "https://github.com/mpasternak/polish-inflection"

[project.optional-dependencies]
# Zależności potrzebne TYLKO do offline'owego builda indeksów (u autora / w CI).
# Sam marisa-trie (runtime) buduje i czyta indeksy; tu dokładamy tylko klienta HTTP
# dla `refresh-sgjp`. Użytkownik pakietu tego nie instaluje.
build = [
    "requests>=2.28",
]

[project.scripts]
polish-inflection-build = "polish_inflection.build:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polish_inflection"]
# Dane (.marisa) są w osobnym pakiecie polish-inflection-data — TU już nie jadą.
# Zostaje tylko marker PEP 561 (py.typed), żeby mypy/pyright widziały adnotacje.
artifacts = ["py.typed"]

[tool.hatch.build.targets.sdist]
# sdist wiezie sam kod (dane w osobnym pakiecie).
include = [
    "src/",
    "tests/",
    "docs/",
    "README.md",
    "LICENSE",
    "NOTICE.md",
    "pyproject.toml",
]

# Monorepo dev wiring: pakiet danych bierzemy z drzewa (workspace), nie z PyPI —
# inaczej `uv sync` nie zresolwuje twardego pinu przed pierwszą publikacją danych.
[tool.uv.workspace]
members = ["data-package"]

[tool.uv.sources]
polish-inflection-data = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
